--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Pacmen</title>
-    <!-- DO NOT CHANGE THIS LINE OF CODE -->
+    <!-- Import Java Script File -->
     <script src="./pacmen.js"></script>
 </head>
 
